name:                socksroute
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              defanor
maintainer:          defanor@uberspace.net
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable socksroute
  ghc-options:         -threaded
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:       async >= 2 && < 3
                     , base >=4.7 && <5
                     , bytestring >=0.10 && < 1
                     , network >= 2 && < 4
                     , socks >= 0.6 && < 1
  -- hs-source-dirs:      
  default-language:    Haskell2010
